SimpleComplex/Database 1.x, 2019-11-09
--------------------------------------
- MsSql result fetchers implementing list-by-column shan't fail
  when column value is non-stringable object.

SimpleComplex/Database 1.x, 2019-09-23
--------------------------------------
- MS Sql unique key constraint error codes.
- Release 1.3.4.

SimpleComplex/Database 1.x, 2019-04-08
--------------------------------------
- Allow scx Utils major version 2.

SimpleComplex/Database 1.x, 2019-01-15
--------------------------------------
- Links to method implementations in interfaces' phpdocs,
  to ease navigation in source.

SimpleComplex/Database 1.x, 2019-01-06
--------------------------------------
- Release 1.3.2.

SimpleComplex/Database 1.x, 2019-01-04
--------------------------------------
- Don't use deprecated methods of the Time class, if new alternatives exist.
- phpunit's assert... methods are static, not instance methods.

SimpleComplex/Database 1.x, 2018-12-08
--------------------------------------
- MsSql result shan't err on empty result set (sic).
- Release 1.3.1.

SimpleComplex/Database 1.x, 2018-11-28
--------------------------------------
- Release 1.3.

SimpleComplex/Database 1.x, 2018-11-18
--------------------------------------
- MariaDb/MySQL SSL (TLS) connection support.
- Flags may now be passed as integer (bitmask), or list of integers and/or
  MYSQLI_CLIENT_* PHP constant name.
- Don't err on integer (dev/test) password.

SimpleComplex/Database 1.x, 2018-10-15
--------------------------------------
- MsSqlResult::fetchColumn() shan't assume that a null value is null
  due to error, when no native error reported.
- Release 1.2.1.

SimpleComplex/Database 1.x, 2018-09-29
--------------------------------------
- MsSql Query native argument type helpers.
- Release 1.2.

SimpleComplex/Database 1.x, 2018-09-23
--------------------------------------
- MsSql query option result_datetime_to_time converts \DateTime to Utils Time
  to ease JSON serialization et al.